RESOLVED FIXED179334
background-clip: text fails to paint text decorations
https://bugs.webkit.org/show_bug.cgi?id=179334
Summary background-clip: text fails to paint text decorations
Simon Fraser (smfr)
Reported 2017-11-06 11:04:48 PST
Created attachment 326135 [details] Testcase -webkit-background-clip: text does the wrong thing with text decoration: https://github.com/w3c/csswg-drafts/issues/900
Attachments
Testcase (635 bytes, text/html)
2017-11-06 11:04 PST, Simon Fraser (smfr)
no flags
Radar WebKit Bug Importer
Comment 1 2022-05-24 04:44:37 PDT
Simon Fraser (smfr)
Comment 2 2022-05-24 21:14:20 PDT
I have a half-written patch for this.
Simon Fraser (smfr)
Comment 3 2022-06-20 12:17:15 PDT
I would like a resolution on https://github.com/w3c/csswg-drafts/issues/7394 first.
Simon Fraser (smfr)
Comment 4 2024-08-08 21:34:47 PDT
EWS
Comment 5 2024-08-09 15:01:38 PDT
Committed 282060@main (91e95190faaa): <https://commits.webkit.org/282060@main> Reviewed commits have been landed. Closing PR #31940 and removing active labels.
Simon Fraser (smfr)
Comment 6 2024-08-22 16:18:35 PDT
Submitted web-platform-tests pull request: https://github.com/web-platform-tests/wpt/pull/47750
Note You need to log in before you can comment on or make changes to this bug.