background-clip: text fails to paint text decorations https://bugs.webkit.org/show_bug.cgi?id=179334 rdar://93823895

Reviewed by Tim Nguyen.

Respect the ForceBlackText/ForceWhiteText PaintBehavior flags, which allows us to paint text decorations into
the `background-clip: text` mask, so they show up when that is used.

This change broke fast/text/text-decoration-currentcolor-fill-color.html, which was testing that text
decorations did *not* show with `background-clip: text`, although it was also testing that the inherited
`-webkit-text-fill-color: transparent` overrides the `color` on an anchor. So fix that test to reflect
what it was doing.

* LayoutTests/fast/text/text-decoration-currentcolor-fill-color-expected.html:
* LayoutTests/fast/text/text-decoration-currentcolor-fill-color.html:
* LayoutTests/imported/w3c/web-platform-tests/css/css-backgrounds/background-clip/clip-text-text-decorations-expected.html: Added.
* LayoutTests/imported/w3c/web-platform-tests/css/css-backgrounds/background-clip/clip-text-text-decorations-ref.html: Added.
* LayoutTests/imported/w3c/web-platform-tests/css/css-backgrounds/background-clip/clip-text-text-decorations.html: Added.
* Source/WebCore/rendering/TextDecorationPainter.cpp:
(WebCore::TextDecorationPainter::decorationColor):

Canonical link: https://commits.webkit.org/282060@main